fixed padding (too far on iphone5)

--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ h1{
   color:white;
   text-decoration: none;
   display:block;
-  padding:20px;
+  padding:10px;
 }
 
 .sidebar li a:hover {
